# XR

./: README.md
demo_broadcaster/: Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  OnlineTraining.h  PatchImgDataset.h  Setting.h  Utils.h  main_broadcaster.cpp  option.toml
demo_broadcaster/model/: ultra_x2_cuda11_3.ts
demo_streamplayer/: CMakeLists.txt  Setting.h  Streamplayer.cpp  Streamplayer.h  Utils.h  main_streamplayer.cpp  option.toml
